sevalla setup added

--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,7 @@
         <div class="container mx-auto text-center">
             <p>&copy; 2024 S3 File Manager. All rights reserved.</p>
             <p>Made with ❤️ by Rohit Ghumare</p>
+            <p>& Hosted on <a href="https://sevalla.com" class="text-blue-400 hover:text-blue-300">Sevalla</a></p>
         </div>
     </footer>
 
